Better plot titles in notebooks

--- a/cp_solutions/inference-sgs_vs_cpsat.ipynb
+++ b/cp_solutions/inference-sgs_vs_cpsat.ipynb
@@ -85,10 +85,10 @@
     "timings = [(res['infer_feasible_time'], res['cpsat_same_quality_time']) for res in comparison_results if res['rel_time_savings_per'] < 100.]\n",
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, figsize =(10, 7))\n",
     "ax1.set_xlabel('Test RCPSP benchmarks')\n",
-    "ax1.set_ylabel('Relative computation time savings for same quality (%)')\n",
+    "ax1.set_ylabel('Fraction time of GNN+SGS vs vanilla CP for same quality (%)')\n",
     "ax1.scatter(x=np.arange(len(rel_time_savings_gain)), y=rel_time_savings_gain)\n",
     "ax2.set_xlabel('Test RCPSP benchmarks')\n",
-    "ax2.set_ylabel('Computation time to reach same quality (s.)')\n",
+    "ax2.set_ylabel('GNN+SGS computation time to reach same quality as vanilla CP (s.)')\n",
     "ax2.plot(np.arange(len(rel_time_savings_gain)), [t[0] for t in timings], label='GNN + SGS')\n",
     "ax2.plot(np.arange(len(rel_time_savings_gain)), [t[1] for t in timings], label='CP-optimize')\n",
     "ax2.legend()\n",
@@ -105,10 +105,10 @@
     "timings = [(res['infer_feasible_time'], res['cpsat_same_quality_time']) for res in comparison_results if res['rel_time_savings_per'] >= 100.]\n",
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, figsize =(10, 7))\n",
     "ax1.set_xlabel('Test RCPSP benchmarks')\n",
-    "ax1.set_ylabel('Relative computation time losses for same quality (%)')\n",
+    "ax1.set_ylabel('Fraction time of GNN+SGS vs vanilla CP for same quality (%)')\n",
     "ax1.scatter(x=np.arange(len(rel_time_savings_loss)), y=rel_time_savings_loss)\n",
     "ax2.set_xlabel('Test RCPSP benchmarks')\n",
-    "ax2.set_ylabel('Computation time to reach same quality (s.)')\n",
+    "ax2.set_ylabel('GNN+SGS computation time to reach same quality as vanilla CP (s.)')\n",
     "ax2.plot(np.arange(len(rel_time_savings_loss)), [t[0] for t in timings], label='GNN + SGS')\n",
     "ax2.plot(np.arange(len(rel_time_savings_loss)), [t[1] for t in timings], label='CP-optimize')\n",
     "ax2.legend()\n",
@@ -141,6 +141,8 @@
    "source": [
     "fig, ax = plt.subplots(figsize =(10, 7))\n",
     "ax.hist(rel_time_savings_gain + rel_time_savings_loss, bins=np.arange(start=0, stop=1000, step=10))\n",
+    "ax.set_xlabel('Fraction time of GNN+SGS vs vanilla CP for same quality (%)')\n",
+    "ax.set_ylabel('Number of test RCPSP benchmarks')\n",
     "plt.show()"
    ]
   }
