Comparison scatter plots in notebooks

--- a/cp_solutions/inference-sgs_vs_cpsat.ipynb
+++ b/cp_solutions/inference-sgs_vs_cpsat.ipynb
@@ -145,6 +145,26 @@
     "ax.set_ylabel('Number of test RCPSP benchmarks')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize =(10, 7))\n",
+    "ax.scatter(x=[cr['infer_feasible_time'] for cr in comparison_results], y=[cr['cpsat_same_quality_time'] for cr in comparison_results])\n",
+    "ax.set_xlabel('GNN inference time + SGS computation time', fontsize=16)\n",
+    "ax.set_ylabel('Vanilla CP time to get same quality as GNN+SGS', fontsize=16)\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_yscale('log')\n",
+    "minv = max(min(cr['infer_feasible_time'] for cr in comparison_results), min(cr['cpsat_same_quality_time'] for cr in comparison_results))\n",
+    "maxv = min(max(cr['infer_feasible_time'] for cr in comparison_results), max(cr['cpsat_same_quality_time'] for cr in comparison_results))\n",
+    "line, = ax.plot([minv, maxv], [minv, maxv], color='gray')\n",
+    "line.set_label('y=x')\n",
+    "ax.legend(fontsize=16)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
