--- a/cp_solutions/inference_vs_cpsat.ipynb
+++ b/cp_solutions/inference_vs_cpsat.ipynb
@@ -145,6 +145,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize =(10, 7))\n",
+    "ax.scatter(x=[cr['infer_feasible_time'] for cr in comparison_results], y=[cr['cpsat_same_quality_time'] for cr in comparison_results])\n",
+    "ax.set_xlabel('GNN inference time + CP feasibility time', fontsize=16)\n",
+    "ax.set_ylabel('Vanilla CP time to get same quality as GNN+CP', fontsize=16)\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_yscale('log')\n",
+    "minv = max(min(cr['infer_feasible_time'] for cr in comparison_results), min(cr['cpsat_same_quality_time'] for cr in comparison_results))\n",
+    "maxv = min(max(cr['infer_feasible_time'] for cr in comparison_results), max(cr['cpsat_same_quality_time'] for cr in comparison_results))\n",
+    "line, = ax.plot([minv, maxv], [minv, maxv], color='gray')\n",
+    "line.set_label('y=x')\n",
+    "ax.legend(fontsize=16)\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -234,6 +254,26 @@
     "ax.hist(rel_time_savings_gain + rel_time_savings_loss, bins=np.arange(start=0, stop=1000, step=10))\n",
     "ax.set_xlabel('Relative computation time savings for same quality (%)')\n",
     "ax.set_ylabel('Number of test RCPSP benchmarks')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize =(10, 7))\n",
+    "ax.scatter(x=[cr['infer_feasible_time'] for cr in comparison_results], y=[cr['cpsat_same_quality_time'] for cr in comparison_results])\n",
+    "ax.set_xlabel('GNN inference time + CP feasibility time', fontsize=16)\n",
+    "ax.set_ylabel('Vanilla CP time to get same quality as GNN+CP', fontsize=16)\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_yscale('log')\n",
+    "minv = max(min(cr['infer_feasible_time'] for cr in comparison_results), min(cr['cpsat_same_quality_time'] for cr in comparison_results))\n",
+    "maxv = min(max(cr['infer_feasible_time'] for cr in comparison_results), max(cr['cpsat_same_quality_time'] for cr in comparison_results))\n",
+    "line, = ax.plot([minv, maxv], [minv, maxv], color='gray')\n",
+    "line.set_label('y=x')\n",
+    "ax.legend(fontsize=16)\n",
     "plt.show()"
    ]
   },
@@ -335,7 +375,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig, ax = plt.subplots(figsize =(10, 7))\n",
+    "ax.scatter(x=[cr['infer_feasible_time'] for cr in comparison_results], y=[cr['cpsat_same_quality_time'] for cr in comparison_results])\n",
+    "ax.set_xlabel('GNN inference time + CP feasibility time', fontsize=16)\n",
+    "ax.set_ylabel('Vanilla CP time to get same quality as GNN+CP', fontsize=16)\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_yscale('log')\n",
+    "minv = max(min(cr['infer_feasible_time'] for cr in comparison_results), min(cr['cpsat_same_quality_time'] for cr in comparison_results))\n",
+    "maxv = min(max(cr['infer_feasible_time'] for cr in comparison_results), max(cr['cpsat_same_quality_time'] for cr in comparison_results))\n",
+    "line, = ax.plot([minv, maxv], [minv, maxv], color='gray')\n",
+    "line.set_label('y=x')\n",
+    "ax.legend(fontsize=16)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
