--- a/cp_solutions/inference-sgs_vs_cpsat_by_feature.ipynb
+++ b/cp_solutions/inference-sgs_vs_cpsat_by_feature.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import json\n",
@@ -34,22 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def get_closest_result(gnn_result, cpsat_results, cpsat_feature_idx, gnn_feature_name):\n",
     "   # change these columns if the benchmark id of the cpsat can be found in another column\n",
     "   cpsat_id_col = (0, )\n",
     "   benchmark_id = gnn_result[\"benchmark_id\"]\n",
-    "   inference_time = gnn_result[gnn_feature_name]\n",
+    "   feature = gnn_result[gnn_feature_name]\n",
     "   matching_cp_results = [res for res in cpsat_results if float(res[cpsat_id_col[0]]) == benchmark_id]\n",
     "   if len(matching_cp_results) == 0:\n",
     "      raise RuntimeError(f\"no cpsat results found for benchmark id {benchmark_id}\")\n",
     "\n",
     "   closest_match = matching_cp_results[0]\n",
     "   for res in matching_cp_results:\n",
-    "      current_diff = abs(float(res[cpsat_feature_idx]) - inference_time)\n",
-    "      if current_diff < abs(float(closest_match[cpsat_feature_idx]) - inference_time):\n",
+    "      current_diff = abs(float(res[cpsat_feature_idx]) - feature)\n",
+    "      if current_diff < abs(float(closest_match[cpsat_feature_idx]) - feature):\n",
     "         closest_match = res\n",
     "\n",
     "   return closest_match"
@@ -60,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "\n",
+    "from scipy.stats import norm\n",
     "\n",
     "def scatter_plot(x, y, xlabel, ylabel, title, log_scale = False):\n",
     "   x_max = max(x)\n",
@@ -82,7 +82,22 @@
     "      plt.xscale('log')\n",
     "      plt.yscale('log')\n",
     "\n",
-    "   plt.show()\n"
+    "   plt.show()\n",
+    "\n",
+    "\n",
+    "def hist_plot(data, xlabel, ylabel, title):\n",
+    "   res = plt.hist(data)\n",
+    "   mean = np.mean(data)\n",
+    "   sigma = np.std(data)\n",
+    "   x = np.linspace(min(data), max(data), 100)\n",
+    "   dx = res[1][1] - res[1][0]\n",
+    "   scale = len(data) * dx\n",
+    "   plt.plot(x, norm.pdf(x, mean, sigma) * scale)\n",
+    "   plt.xlabel(xlabel)\n",
+    "   plt.ylabel(ylabel)\n",
+    "   plt.title(title)\n",
+    "   plt.show()\n",
+    "   print(f\"avg: {np.mean(data)}, std: {np.std(data)}\")\n"
    ],
    "metadata": {
     "collapsed": false
@@ -90,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -118,13 +133,37 @@
     "scatter_plot(gnn_results, cpsat_baseline, \"gnn makespan\", \"cpsat makespan\", \"same runtime\")\n",
     "\n",
     "gnn_results = [gnn_res[\"inference_time\"] for gnn_res in gnn_data.values()]\n",
-    "closest = [get_closest_result(gnn_res, cpsat_data, cpsat_makespan_col, \"feasibility_abs_makespan\") for gnn_res in gnn_data.values()]\n",
     "gnn_makespans = [res[\"feasibility_abs_makespan\"] for res in gnn_data.values()]\n",
     "cpsat_baseline = [float(get_closest_result(gnn_res, cpsat_data, cpsat_makespan_col, \"feasibility_abs_makespan\")[cpsat_inf_time_col]) for gnn_res in gnn_data.values()]\n",
     "scatter_plot(gnn_results, cpsat_baseline, \"gnn inf time\", \"cpsat inf time\", \"same quality\",  log_scale=True)\n"
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def get_best_cpsat_result(gnn_result, cpsat_results):\n",
+    "   cpsat_id_col = (0, )\n",
+    "   cpsat_runs = [res for res in cpsat_results if float(res[cpsat_id_col[0]]) == gnn_result[\"benchmark_id\"]]\n",
+    "   return cpsat_runs[-1]\n",
+    "\n",
+    "\n",
+    "cpsat_best_results = [int(get_best_cpsat_result(gnn_res, cpsat_data)[cpsat_makespan_col]) for gnn_res in gnn_data.values()]\n",
+    "gnn_rel_performance = [gnn_perf / cpsat_perf for gnn_perf, cpsat_perf in zip(gnn_makespans, cpsat_best_results)]\n",
+    "hist_plot(gnn_rel_performance, \"gnn relative performance\", \"number of problem instances\", \"gnn performance relative to best cpsat solution\")\n",
+    "\n",
+    "gnn_rel_performance_vs_best = [res[\"feasibility_rel_makespan_ref\"] for res in gnn_data.values()]\n",
+    "hist_plot(gnn_rel_performance_vs_best, \"gnn relative performance\", \"number of problem instances\", \"gnn performance relative to best known solution\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   }
  ],
