Training on small and medium instances

--- a/cp_solutions/format_cpsat_solutions.ipynb
+++ b/cp_solutions/format_cpsat_solutions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('bench_list.json', 'r') as f:\n",
+    "    bench_list = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
@@ -54,7 +64,8 @@
     "    for row in reader:\n",
     "        if int(row[0]) != instance_id:\n",
     "            cpsat_json_dict.update({\n",
-    "                'instance {}'.format(instance_id): {\n",
+    "                bench_list[instance_id]: {\n",
+    "                    'instance id': instance_id,\n",
     "                    'sol': {\n",
     "                        '_schedule_to_recompute': False,\n",
     "                        'rcpsp_schedule': {\n",
