--- a/cp_solutions/inference_vs_cpsat.ipynb
+++ b/cp_solutions/inference_vs_cpsat.ipynb
@@ -393,7 +393,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('rl4rcpsp')",
+   "display_name": "gnn4rcpsp",
    "language": "python",
    "name": "python3"
   },
@@ -407,12 +407,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ea01d3ba5ec8e0e85fa445479db093e0b138facb1ec976d469b61d1b99d76976"
+    "hash": "15bb3ea2ec4a8b1a5a8aac58f04f3ebbb46942042221e8547ea273329fc9236f"
    }
   }
  },
